# maker_event

./: .gitignore  .last_state.json  CLAUDE.md  EFFICIENCY_REPORT.md  LICENSE  README.md  country_mapping.json  generate_events.py  index.html  pyproject.toml
.github/workflows/: update-events.yml
templates/: index.html
