[project]
name = "maker-event-generator"
version = "0.1.0"
description = "Generate static web pages for maker events from Google Sheets"
authors = [
    { name = "Maker Event Team" }
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "jinja2>=3.1.2",
    "python-dateutil>=2.8.2",
    "pydantic>=2.5.0",
    "pillow>=10.0.0",
    "fonttools>=4.47.0",
]
requires-python = ">=3.8.1"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]